--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
     "node-input-validator": "^4.5.1",
+    "nodemailer": "^6.9.0",
     "nodemon": "^2.0.19",
     "promise-mysql2": "^1.0.0"
   }
