--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-input-validator": "^4.5.1",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.19",
-    "promise-mysql2": "^1.0.0"
+    "promise-mysql2": "^1.0.0",
+    "serve-favicon": "^2.5.0"
   }
 }
